# scpterm

./: CMakeLists.txt  Makefile  README.md
cmake/: FindSDL2_image.cmake  designdoc.txt
src/: main.cpp  timer.cpp  timer.h
